--- a/static/games/minesweeper/index.html
+++ b/static/games/minesweeper/index.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
     <script src="class.js"></script>
     <script src="script.js"></script>
