--- a/static/games/tetris/index.html
+++ b/static/games/tetris/index.html
@@ -18,8 +18,8 @@
                 <canvas class="holdedtetrimos" id="q1"></canvas>
             </div>
             <canvas class="mainarea" id="mainarea"></canvas>
-            <div class="clear"></div>
-            <div class="score"></div>
+<!--            <div class="clear"></div>-->
+<!--            <div class="score"></div>-->
         </div>
         <script src="class.js"></script>
         <script src="script.js"></script>
